# pre-gommit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  go.mod  main.go  pre_gommit_hooks.py  pyproject.toml
.github/workflows/: update.yaml
cmd/: errcheck.go  gofix.go  gofmt.go  golangci-lint.go  govet.go  root.go  staticcheck.go  util.go
