[project]
name = "pre-gommit-hooks"
version = "0.1.0"
description = "Update tool for my pre-commit hooks"
authors = [{ name = "Dowon", email = "ks2515@naver.com" }]
dependencies = [
    "httpx>=0.27.0",
    "returns>=0.22.0",
    "pydantic>=2.7.1",
    "pyyaml>=6.0.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["ruff>=0.4.3", "pre-commit>=3.7.0"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "C90",
    "E",
    "EM",
    "F",
    "FA",
    "FBT",
    "FURB",
    "I001",
    "ISC",
    "N",
    "PD",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "RET",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TRY",
    "UP",
    "W",
]
ignore = ["B905", "E501"]
unfixable = ["F401"]
