[project]
name = "pre-gommit-hooks"
version = "0.1.0"
description = "Update tool for my pre-commit hooks"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Dowon", email = "ks2515@naver.com" }]
dependencies = ["httpx>=0.27.0,<1", "pydantic>=2.7.1,<3", "pyyaml>=6.0.1", "returns>=0.22.0,<1"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "EM",
  "F",
  "FA",
  "FBT",
  "FURB",
  "I001",
  "ISC",
  "N",
  "PD",
  "PERF",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "RET",
  "RUF",
  "S",
  "SIM",
  "T20",
  "TRY",
  "UP",
  "W",
]
ignore = ["B905", "E501"]
unfixable = ["F401"]
